# mann

./: .clang-format  .gitignore  CMakeLists.txt  CREDITS  README.md  THANKS
cmake/modules/: FindCatch.cmake
doc/: ANNmanual.tex  Makefile  ann.bib
doc/Figs/: ann.eps  ann.fig  annlogo.eps  kd-tree.eps  kd-tree.fig
examples/sample/: CMakeLists.txt
examples/simple/: CMakeLists.txt  simple.cpp
include/: mann.h
lib/: CMakeLists.txt  util.h
src/: kd_tree.h
test/: CMakeLists.txt  box.cpp  kdtree.cpp  point.cpp  rectangle.cpp  test_input.h
